# bigfoot

./: .gitignore  LICENSE  README.md  pyproject.toml
bigfoot/: app.py  bigfoot_schema.py  bq.py  constants.py  google_spreadsheet.py  pull.py  push.py  sheets.py
tests/: test_bigfoot.py
