[tool.poetry]
name = "bigfoot"
version = "0.1.0"
description = "The missing (big) schema manager for Google BigQuery."
authors = ["Logan Hennessy <logan@gradient.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
